--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -32,7 +32,7 @@ jobs:
         run: bash "${GITHUB_WORKSPACE}/scripts/format/format/update_readme.sh"
       - run: npx prettier --write .
         if: github.event_name != 'pull_request' || github.event.action != 'closed'
-      - run: tsc
+      - run: bash "${GITHUB_WORKSPACE}/scripts/format/format/build.sh"
         if: github.event_name != 'pull_request' || github.event.action != 'closed'
       - uses: dev-hato/actions-diff-pr-management@v1.2.1
         with:
