--- a/action.yml
+++ b/action.yml
@@ -13,5 +13,5 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          const {script} = require('${{ github.action_path }}/dist/get_version.js')
+          const {script} = require('${{ github.action_path }}/dist/get-version.js')
           return await script()
