--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@proofdict/textlint-rule-proofdict": "3.1.2",
     "@textlint-ja/textlint-rule-no-insert-dropping-sa": "2.0.1",
     "@types/js-yaml": "^4.0.9",
+    "esbuild": "^0.24.0",
     "js-yaml": "4.1.0",
     "node-fetch": "^3.3.2",
     "prettier": "3.3.3",
