--- a/action.yml
+++ b/action.yml
@@ -14,4 +14,6 @@ runs:
       with:
         script: |
           const {script} = require('${{ github.action_path }}/dist/get-version.js')
-          return await script()
+          const res = await script();
+          console.log(res);
+          return res
