--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,4 @@ runs:
       with:
         script: |
           const {script} = require('${{ github.action_path }}/dist/get-version.js')
-          const res = await script();
-          console.log(res);
-          return res
+          return await script()
