--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,11 @@ jobs:
           cache: "npm"
           node-version: ${{ matrix.node-version }}
       - run: echo ${{ matrix.node-version }}
+  test-complete:
+    runs-on: ubuntu-latest
+    needs: setup_node
+    steps:
+      - run: exit 0
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
   cancel-in-progress: true
